--- a/themes/nre-labs-hugo-theme/src/styles/tag-styles.less
+++ b/themes/nre-labs-hugo-theme/src/styles/tag-styles.less
@@ -1,5 +1,8 @@
 html, body {
   height: 100%;
+  // following rules to accommodate hamburger menu on safari
+  overflow-x: hidden;
+  position: relative;
 }
 
 aside.small {
